--- a/.github/workflows/new-test.yml
+++ b/.github/workflows/new-test.yml
@@ -2,8 +2,8 @@ name: test checks
 on:
   schedule:
     - cron: '*/5 * * * *'
-  workflow_dispatch:
-  push:
+  #workflow_dispatch:
+  #push:
 jobs:
   run-test-checks:
     runs-on: ubuntu-latest
